--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -9,6 +9,13 @@
   "background": {
     "service_worker": "dist/background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["*://*.ubereats.com/*"],
+      "js": ["dist/content-script.js"],
+      "run_at": "document_idle"
+    }
+  ],
   "action": {
     "default_popup": "src/popup.html",
     "default_icon": {
